# nasa-parser

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-10-03-184935_init/: down.sql  up.sql
result/: news.json  posts.json
src/: errors.rs  main.rs  news.rs  post.rs  schema.rs
src/models/: mod.rs  news.rs  posts.rs
src/parser/: errors.rs  mod.rs  news.rs  post.rs
