[package]
name = "nasa-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
diesel = "2.2.4"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
